# RP2350Touch169-Exp

./: .gitmodules  README.md
exp/lvglDashboard/: CMakeLists.txt
exp/lvglDashboard/port/lvgl/: LCD.h  lvgl_board.c  lvgl_board.h
exp/lvglDashboard/py/: test1.py
exp/lvglDashboard/src/: CMakeLists.txt  PowerState.cpp  PowerState.h  State.cpp  State.h  Widgets.cpp  Widgets.h  main.cpp
exp/lvglDashboard/src/imgs/: battery0.c  battery100.c  battery25.c  battery50.c  battery75.c  batteryC.c  chargeOff 09.26.17.c  chargeOn.c  cpuOff.c  cpuOn.c  driveOff.c  driveOn.c  halt.c  play.c
exp/lvglSimple/: CMakeLists.txt  lvgl.cmake  touch169.cmake
exp/lvglSimple/port/lvgl/: lv_conf.h
exp/lvglSimple/src/: CMakeLists.txt  Widgets.cpp  Widgets.h  main.cpp
exp/lvglSimple/src/imgs/: LICENCE.md
